--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2 contenteditable="true">texto</h2>
+    <h2 contenteditable="true">Front-end</h2>
 </body>
 </html>
